JumpScript/tests/baselines/reference/continueNotInIterationStatement4.errors.txt
tests/cases/compiler/continueNotInIterationStatement4.jump(4,5): error TS1107: Jump target cannot cross function boundary.


==== tests/cases/compiler/continueNotInIterationStatement4.jump (1 errors) ====
    TWO:
    while (true){
      var x = () => {
        continue TWO;
        ~~~~~~~~~~~~~
!!! error TS1107: Jump target cannot cross function boundary.
      }
    }
    